--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +10,11 @@
     <script src="/index.js"></script>
     <title>Tutorial socket.io</title>
 </head>
+
 <body>
-    
+    <header>Mi chat</header>
+    <div class="message"></div>
+    <form onsubmit="return addMessage(this)"></form>
 </body>
+
 </html>
