--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
 
 <body>
     <header>Mi chat</header>
-    <div class="message"></div>
-    <form onsubmit="return addMessage(this)"></form>
+    <input type="text" id="ejemplo">
+    <div id="messages"></div>
+    <form onsubmit="return addMessage(this)">
+        <input type="text" id="username">
+        <input type="text" id="message">
+        <input type="submit" value="enviar">
+    </form>
 </body>
 
 </html>
